--- a/server-project/CustomerAccount.WebAPI/appsettings.Development.json
+++ b/server-project/CustomerAccount.WebAPI/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": "Error",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "CustomerAccountConnectionMiriam",
+          "tableName": "Log",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
   }
 }
