--- a/server-project/CustomerAccount.WebAPI/appsettings.json
+++ b/server-project/CustomerAccount.WebAPI/appsettings.json
@@ -2,12 +2,27 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CustomerAccountConnectionMiri": "Data Source=localhost\\sqlexpress;Initial Catalog=CustomerAccount;Integrated Security=True",
     "CustomerAccountConnectionMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=CustomerAccount;Integrated Security=True"
+  },
+  "Serilog": {
+    "MinimumLevel": "Error",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "CustomerAccountConnectionMiriam",
+          "tableName": "Log",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
   }
 }
