finish saga policy

--- a/server-project/CustomerAccount.Services/CustomerAccount.Services.csproj
+++ b/server-project/CustomerAccount.Services/CustomerAccount.Services.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CustomerAccount.Data\CustomerAccount.Data.csproj" />
+    <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
 
 </Project>
