--- a/server-project/Transaction.WebAPI/Transaction.WebAPI.csproj
+++ b/server-project/Transaction.WebAPI/Transaction.WebAPI.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NServiceBus" Version="7.7.4" />
+    <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0" />
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.5.1" />
     <PackageReference Include="NServiceBus.RabbitMQ" Version="7.0.0" />
     <PackageReference Include="NServiceBus.SqlServer" Version="6.3.4" />
