--- a/server-project/Transaction.WebAPI/appsettings.json
+++ b/server-project/Transaction.WebAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TransactionConnectionMiri": "Data Source=localhost\\sqlexpress;Initial Catalog=Transactions;Integrated Security=True",
-    "TransactionConnectionMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=Transactions;Integrated Security=True"
+    "TransactionConnectionMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=Transactions;Integrated Security=True",
       "RabbitMQConnection": "host=localhost"
   }
 }
