--- a/server-project/Transaction.Services/Transaction.Services.csproj
+++ b/server-project/Transaction.Services/Transaction.Services.csproj
@@ -13,9 +13,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NServiceBus" Version="7.7.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Messages\Messages.csproj" />
     <ProjectReference Include="..\Transaction.Data\Transaction.Data.csproj" />
   </ItemGroup>
 
