--- a/server-project/CustomerAccount.WebAPI/CustomerAccount.WebAPI.csproj
+++ b/server-project/CustomerAccount.WebAPI/CustomerAccount.WebAPI.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Diagnostics.EventLog" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
