--- a/server-project/CustomerAccount.WebAPI/appsettings.json
+++ b/server-project/CustomerAccount.WebAPI/appsettings.json
@@ -14,7 +14,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CustomerAccountConnectionMiri": "Data Source=localhost\\sqlexpress;Initial Catalog=CustomerAccount;Integrated Security=True",
-    "CustomerAccountConnectionMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=CustomerAccount;Integrated Security=True",
+    "CustomerAccountConnectionMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=CustomerAccounts;Integrated Security=True",
     "CustomerAccountNSBConnectionMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=CustomerAccountNSB;Integrated Security=True",
     "RabbitMQConnection": "host=localhost"
   },
