--- a/server-project/Transaction.WebAPI/appsettings.json
+++ b/server-project/Transaction.WebAPI/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "TransactionConnectionMiri": "Data Source=localhost\\sqlexpress;Initial Catalog=Transactions;Integrated Security=True",
     "TransactionConnectionMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=Transactions;Integrated Security=True",
+    "TransactionConnectionNSBMiri": "Data Source=localhost\\sqlexpress;Initial Catalog=TransactionsNSB;Integrated Security=True",
     "TransactionConnectionNSBMiriam": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=TransactionsNSB;Integrated Security=True",
     "RabbitMQConnection": "host=localhost"
   }
