add swagger setting extension and delete expired codes

--- a/server-project/CustomerAccount.WebAPI/CustomerAccount.WebAPI.csproj
+++ b/server-project/CustomerAccount.WebAPI/CustomerAccount.WebAPI.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CustomerAccount.Services\CustomerAccount.Services.csproj" />
+    <ProjectReference Include="..\CustomExceptions\CustomExceptions.csproj" />
   </ItemGroup>
 
 </Project>
