--- a/server-project/Transaction.Services/Transaction.Services.csproj
+++ b/server-project/Transaction.Services/Transaction.Services.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CustomExceptions\CustomExceptions.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
     <ProjectReference Include="..\Transaction.Data\Transaction.Data.csproj" />
   </ItemGroup>
