--- a/server-project/Transaction.Data/Transaction.Data.csproj
+++ b/server-project/Transaction.Data/Transaction.Data.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CustomExceptions\CustomExceptions.csproj" />
+  </ItemGroup>
+
 </Project>
