--- a/server-project/Transaction.WebAPI/appsettings.json
+++ b/server-project/Transaction.WebAPI/appsettings.json
@@ -9,6 +9,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": "Error",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=DESKTOP-411ES1J\\ADMIN;Initial Catalog=Transactions;Integrated Security=True",
+          "tableName": "Log",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TransactionConnectionMiri": "Data Source=localhost\\sqlexpress;Initial Catalog=Transactions;Integrated Security=True",
