--- a/server-project/Transaction.WebAPI/Transaction.WebAPI.csproj
+++ b/server-project/Transaction.WebAPI/Transaction.WebAPI.csproj
@@ -19,6 +19,10 @@
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.5.1" />
     <PackageReference Include="NServiceBus.RabbitMQ" Version="7.0.0" />
     <PackageReference Include="NServiceBus.SqlServer" Version="6.3.4" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.7.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
