--- a/server-project/CustomerAccount.WebAPI/appsettings.json
+++ b/server-project/CustomerAccount.WebAPI/appsettings.json
@@ -25,7 +25,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "CustomerAccountConnectionMiri",
+          "connectionString": "Data Source=localhost\\sqlexpress;Initial Catalog=CustomerAccount;Integrated Security=True",
           "tableName": "Log",
           "autoCreateSqlTable": true
         }
