email configure in options

--- a/server-project/CustomerAccount.WebAPI/appsettings.json
+++ b/server-project/CustomerAccount.WebAPI/appsettings.json
@@ -10,6 +10,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Email": {
+    "emailAddress": "crbemail6@gmail.com",
+    "password": "0548433752"
+  },
   "Serilog": {
     "MinimumLevel": "Error",
     "WriteTo": [
